グループルーレットの機能的部分の実装
