# backend/lambda/src/api/main.py
@@ -9,6 +9,9 @@ except ImportError:
 
 
 CHARACTER = u.request_path_param("character")
+REQUEST = lambda request: request
+ROOM_ID = u.request_path_param("roomId")
+OPTION_ID = u.request_path_param("optionId")
 
 
 def get_jukugo_search(key_type: str, character: str):
@@ -36,9 +39,59 @@ ROUTES = [
         CHARACTER,
     ),
     u.api_route("POST", "group-roulette/rooms", group_roulette.create_room),
+    u.api_route(
+        "GET",
+        "group-roulette/rooms/{roomId}/state",
+        group_roulette.get_room_state,
+        REQUEST,
+        ROOM_ID,
+    ),
+    u.api_route(
+        "POST",
+        "group-roulette/rooms/{roomId}/join",
+        group_roulette.join_room,
+        REQUEST,
+        ROOM_ID,
+    ),
+    u.api_route(
+        "POST",
+        "group-roulette/rooms/{roomId}/options",
+        group_roulette.add_option,
+        REQUEST,
+        ROOM_ID,
+    ),
+    u.api_route(
+        "DELETE",
+        "group-roulette/rooms/{roomId}/options/{optionId}",
+        group_roulette.remove_option,
+        REQUEST,
+        ROOM_ID,
+        OPTION_ID,
+    ),
+    u.api_route(
+        "PATCH",
+        "group-roulette/rooms/{roomId}/guest-add-enabled",
+        group_roulette.set_guest_add_enabled,
+        REQUEST,
+        ROOM_ID,
+    ),
+    u.api_route(
+        "POST",
+        "group-roulette/rooms/{roomId}/spins/start",
+        group_roulette.start_spin,
+        REQUEST,
+        ROOM_ID,
+    ),
+    u.api_route(
+        "POST",
+        "group-roulette/rooms/{roomId}/spins/stop",
+        group_roulette.stop_spin,
+        REQUEST,
+        ROOM_ID,
+    ),
 ]
 
 
-@u.logger.inject_lambda_context(log_event=True)
+@u.logger.inject_lambda_context(log_event=False)
 def main(event, context):
     return u.dispatch_api_request(event, ROUTES)
